--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>HolidayPirates Frontend test</title>
-  </head>
-  <body>
-    <h1>Welcome on board! ☠️</h1>
-    <p>
-      Show us your best frontend skills! Good luck and we are super excited
-      about the result!
-    </p>
-  </body>
+<head>
+  <meta charset="UTF-8"/>
+  <title>HolidayPirates Frontend test</title>
+</head>
+<body>
+
+
+<div class="hotel-booking-wrapper"></div>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        initList({
+            sorting: {
+                stars: true,
+                price: true,
+            },
+            count: 5,
+            reviews: true,
+            pagination: 'lazy',
+            element: '.hotel-booking-wrapper'
+        });
+    });
+</script>
+</body>
 </html>
