*React Added as per the confirmation from ANNA

--- a/src/index.html
+++ b/src/index.html
@@ -5,24 +5,6 @@
   <title>HolidayPirates Frontend test</title>
 </head>
 <body>
-
-
-<div id="hotel-booking-wrapper"></div>
-
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    initHotelList({
-      sorting: {
-        stars: true,
-        price: true,
-      },
-      count: 5,
-      reviews: false,
-      pagination: true,
-      itemToAdd: 300,
-      element: 'hotel-booking-wrapper'
-    });
-  });
-</script>
+<div id="root"></div>
 </body>
 </html>
